--- a/aclap/tsconfig.spec.json
+++ b/aclap/tsconfig.spec.json
@@ -1,11 +1,10 @@
+/* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "../out-tsc/spec",
-    "module": "commonjs",
+    "outDir": "./out-tsc/spec",
     "types": [
-      "jasmine",
-      "node"
+      "jasmine"
     ]
   },
   "files": [
@@ -13,12 +12,7 @@
     "src/polyfills.ts"
   ],
   "include": [
-    "**/*.spec.ts",
-    "**/*.d.ts"
-  ],
-  "exclude": [
-    "**/*.tns.ts",
-    "**/*.android.ts",
-    "**/*.ios.ts"
+    "src/**/*.spec.ts",
+    "src/**/*.d.ts"
   ]
 }
