--- a/aclap/package.json
+++ b/aclap/package.json
@@ -30,9 +30,10 @@
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "bootstrap": "^4.5.0",
     "core-js": "^2.5.7",
+    "nativescript-plugin-firebase": "^10.5.2",
     "reflect-metadata": "~0.1.12",
     "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
+    "tslib": "^2.0.3",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
