--- a/aclap/.migration_backup/package.json
+++ b/aclap/.migration_backup/package.json
@@ -34,7 +34,8 @@
     "reflect-metadata": "~0.1.12",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.3",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.2",
+    "tns-core-modules": "7.0.11"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1001.7",
@@ -59,9 +60,5 @@
     "tslint": "~6.1.0",
     "typescript": "^4.0.3"
   },
-  "nativescript": {
-    "id": "org.nativescript.aclap"
-  },
-  
   "main": "main.tns.js"
 }
