Display Youtube Component done
must install youtube dependency

--- a/aclap/package.json
+++ b/aclap/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "~10.1.6",
     "@angular/platform-browser-dynamic": "~10.1.6",
     "@angular/router": "~10.1.6",
+    "@angular/youtube-player": "^10.2.5",
     "@nativescript/angular": "~10.1.0",
     "@nativescript/core": "~7.0.0",
     "@nativescript/schematics": "^10.1.0",
