working angular and android compile

--- a/aclap/App_Resources/Android/app.gradle
+++ b/aclap/App_Resources/Android/app.gradle
@@ -8,8 +8,8 @@
 android {  
   defaultConfig {  
     generatedDensities = []
-    applicationId = "__PACKAGE__" 
-    
+    applicationId = "org.nativescript.aclap" 
+    multiDexEnabled true
     //override supported platforms
     // ndk {
     //       abiFilters.clear()
