--- a/aclap/package.json
+++ b/aclap/package.json
@@ -38,9 +38,10 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1001.7",
+    "@angular-devkit/build-angular": "^0.1001.7",
     "@angular/cli": "~10.1.7",
     "@angular/compiler-cli": "~10.1.6",
+    "@nativescript/android": "7.0.1",
     "@nativescript/tslint-rules": "~0.0.5",
     "@nativescript/webpack": "~3.0.0",
     "@types/jasmine": "~3.5.0",
