--- a/aclap/package.json
+++ b/aclap/package.json
@@ -18,6 +18,7 @@
     "@angular/common": "~10.1.6",
     "@angular/compiler": "~10.1.6",
     "@angular/core": "~10.1.6",
+    "@angular/fire": "^6.0.3",
     "@angular/forms": "~10.1.6",
     "@angular/localize": "~10.1.6",
     "@angular/platform-browser": "~10.1.6",
