--- a/aclap/package.json
+++ b/aclap/package.json
@@ -32,6 +32,7 @@
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "bootstrap": "^4.5.0",
     "core-js": "^2.5.7",
+    "firebase": "^7.24.0",
     "nativescript-plugin-firebase": "^10.5.2",
     "nativescript-ui-sidedrawer": "^9.0.3",
     "reflect-metadata": "~0.1.12",
