switching to develop branch

--- a/aclap/package.json
+++ b/aclap/package.json
@@ -33,6 +33,7 @@
     "bootstrap": "^4.5.0",
     "core-js": "^2.5.7",
     "nativescript-plugin-firebase": "^10.5.2",
+    "nativescript-ui-sidedrawer": "^9.0.3",
     "reflect-metadata": "~0.1.12",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.3",
