--- a/aclap/package.json
+++ b/aclap/package.json
@@ -15,6 +15,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~10.1.6",
+    "@angular/cdk": "^10.2.6",
     "@angular/common": "~10.1.6",
     "@angular/compiler": "~10.1.6",
     "@angular/core": "~10.1.6",
@@ -32,6 +33,7 @@
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "bootstrap": "^4.5.0",
     "core-js": "^2.5.7",
+    "firebase": "^7.24.0",
     "nativescript-plugin-firebase": "^10.5.2",
     "reflect-metadata": "~0.1.12",
     "rxjs": "~6.6.0",
