android home screen

--- a/aclap/package.json
+++ b/aclap/package.json
@@ -31,9 +31,11 @@
     "@nativescript/schematics": "^10.1.0",
     "@nativescript/theme": "~2.5.0",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
+    "@nstudio/nativescript-cardview": "^2.0.1",
     "bootstrap": "^4.5.0",
     "core-js": "^2.5.7",
     "firebase": "^7.24.0",
+    "nativescript-cardview": "^3.2.0",
     "nativescript-plugin-firebase": "^10.5.2",
     "nativescript-ui-sidedrawer": "^9.0.3",
     "reflect-metadata": "~0.1.12",
