--- a/aclap/App_Resources/Android/AndroidManifest.xml
+++ b/aclap/App_Resources/Android/AndroidManifest.xml
@@ -19,6 +19,9 @@
 	<uses-permission android:name="android.permission.INTERNET"/>
 
 	<application
+
+		android:requestLegacyExternalStorage="true"
+
 		android:name="com.tns.NativeScriptApplication"
 		android:allowBackup="true"
 		android:icon="@drawable/icon"
