--- a/aclap/package.json
+++ b/aclap/package.json
@@ -36,6 +36,8 @@
     "core-js": "^2.5.7",
     "firebase": "^7.24.0",
     "nativescript-cardview": "^3.2.0",
+    "nativescript-downloader": "^2.1.5",
+    "nativescript-permissions": "^1.3.11",
     "nativescript-plugin-firebase": "^10.5.2",
     "nativescript-ui-sidedrawer": "^9.0.3",
     "nativescript-youtube-parser": "^2.0.1",
