--- a/aclap/package.json
+++ b/aclap/package.json
@@ -26,6 +26,7 @@
     "@angular/platform-browser-dynamic": "~10.1.6",
     "@angular/router": "~10.1.6",
     "@angular/youtube-player": "^10.2.5",
+    "@asymmetrik/ngx-leaflet": "^8.1.0",
     "@nativescript/angular": "~10.1.0",
     "@nativescript/core": "^7.0.13",
     "@nativescript/schematics": "^10.1.0",
@@ -35,6 +36,7 @@
     "bootstrap": "^4.5.0",
     "core-js": "^2.5.7",
     "firebase": "^7.24.0",
+    "leaflet": "^1.7.1",
     "nativescript-cardview": "^3.2.0",
     "nativescript-downloader": "^2.1.5",
     "nativescript-permissions": "^1.3.11",
@@ -55,6 +57,7 @@
     "@nativescript/webpack": "~3.0.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/leaflet": "^1.5.20",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
