--- a/aclap/package.json
+++ b/aclap/package.json
@@ -39,6 +39,7 @@
     "nativescript-downloader": "^2.1.5",
     "nativescript-permissions": "^1.3.11",
     "nativescript-plugin-firebase": "^10.5.2",
+    "nativescript-simple-filepicker": "^1.1.2",
     "nativescript-ui-sidedrawer": "^9.0.3",
     "nativescript-youtube-parser": "^2.0.1",
     "reflect-metadata": "~0.1.12",
