--- a/aclap/package.json
+++ b/aclap/package.json
@@ -27,6 +27,7 @@
     "@angular/router": "~10.1.6",
     "@angular/youtube-player": "^10.2.5",
     "@asymmetrik/ngx-leaflet": "^8.1.0",
+    "@nativescript-community/ui-mapbox": "^6.2.0",
     "@nativescript/angular": "~10.1.0",
     "@nativescript/core": "^7.0.13",
     "@nativescript/schematics": "^10.1.0",
@@ -35,8 +36,8 @@
     "@nstudio/nativescript-cardview": "^2.0.1",
     "bootstrap": "^4.5.0",
     "core-js": "^2.5.7",
-    "leaflet": "^1.7.1",
     "firebase": "^8.2.3",
+    "leaflet": "^1.7.1",
     "nativescript-cardview": "^3.2.0",
     "nativescript-downloader": "^2.1.5",
     "nativescript-permissions": "^1.3.11",
