Adding testing for FirebaseAuthenticator

--- a/firebase/functions/.gitignore
+++ b/firebase/functions/.gitignore
@@ -1,6 +1,7 @@
 # Compiled JavaScript files
 **/*.js
 **/*.js.map
+lib/
 
 # Except the ESLint config file
 !.eslintrc.js
@@ -10,3 +11,6 @@ typings/
 
 # Node.js dependency directory
 node_modules/
+
+# Environment information
+environment.ts
