--- a/firebase/functions/package.json
+++ b/firebase/functions/package.json
@@ -15,7 +15,9 @@
   "main": "lib/index.js",
   "dependencies": {
     "firebase-admin": "^9.2.0",
-    "firebase-functions": "^3.11.0"
+    "firebase-functions": "^3.11.0",
+    "generate-password": "^1.6.0",
+    "nodemailer": "^6.4.17"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^3.9.1",
