Setting up projecto for Firebase deployment

--- a/firebase.json
+++ b/firebase.json
@@ -10,7 +10,7 @@
     ]
   },
   "hosting": {
-    "public": "public",
+    "public": "aclap/dist/aclap",
     "ignore": [
       "firebase.json",
       "**/.*",
