--- a/aclap/package.json
+++ b/aclap/package.json
@@ -40,6 +40,7 @@
     "leaflet": "^1.7.1",
     "nativescript-cardview": "^3.2.0",
     "nativescript-downloader": "^2.1.5",
+    "nativescript-geocoding": "^3.0.0",
     "nativescript-permissions": "^1.3.11",
     "nativescript-plugin-firebase": "^10.5.2",
     "nativescript-simple-filepicker": "^1.1.2",
