--- a/aclap/package.json
+++ b/aclap/package.json
@@ -30,6 +30,7 @@
     "@nativescript-community/ui-mapbox": "^6.2.0",
     "@nativescript/angular": "~10.1.0",
     "@nativescript/core": "^7.0.13",
+    "@nativescript/firebase": "^11.1.3",
     "@nativescript/schematics": "^10.1.0",
     "@nativescript/theme": "~2.5.0",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
