--- a/aclap/package.json
+++ b/aclap/package.json
@@ -45,6 +45,7 @@
     "nativescript-permissions": "^1.3.11",
     "nativescript-plugin-firebase": "^10.5.2",
     "nativescript-simple-filepicker": "^1.1.2",
+    "nativescript-text-justify": "^2.0.0",
     "nativescript-ui-listview": "^9.1.0",
     "nativescript-ui-sidedrawer": "^9.0.3",
     "nativescript-youtube-parser": "^2.0.1",
